# zerospeech2017

./: .gitignore  .gitmodules  Dockerfile  README.md  download_data.sh
sample_eval/: sortie.txt
sample_eval/install/: requirements.txt
sample_eval/ressources/: eval.py
track1/: .gitignore  README.md  eval1
track1/baseline/: baseline_all.sh  baseline_one.sh
track1/eval/: distance.py  eval_track1.cfg  eval_track1.py  eval_train.py
track1/install/: pip_requirements.txt
track1/ressources/: eval.cfg  eval.py
track1/setup/: requirements_conda.txt  requirements_pip.txt  setup_track1.sh
track1/src/extract_features/: features_extraction_challenge.py  mfcc_config.json  npz2h5features.py
track2/baseline/baseline_english/: config  run.sh  run_disc
track2/baseline/baseline_english/data/: .feacalc_hist  Makefile  english.lst  english_vad  make_english_cache.sh  readme.md  run.sh
track2/baseline/baseline_french/: config  post_disc  run.sh  run_disc
track2/baseline/baseline_french/data/: .feacalc_hist  Makefile  french.lst  french_vad  make_french_cache.sh  run.sh
track2/baseline/baseline_french/scripts/: beam_pairs.py  plebdisc_filepair
track2/baseline/baseline_mandarin/: .gitignore  config  run.sh  run_disc
track2/baseline/baseline_mandarin/data/: .feacalc_hist  Makefile  make_mandarin_cache.sh  mandarin.lst  mandarin_vad  run.sh
track2/baseline/baseline_mandarin/scripts/: build_graph.py  dedup_clusters.py  dump_pseudoterm.py  zrtools2eval
track2/eval/: english_eval2.py  eval_track2.py  french_eval2.py  mandarin_eval2.py
track2/setup/: readme.md  requirements_conda.txt  requirements_pip.txt  setup_track2.sh
track2/src/: .gitignore
track2/src/ZRTools/: .feacalc_hist  LICENSE  Makefile  config  post_disc  readme.rst  run_disc  run_samediff
track2/src/ZRTools/plebdisc/: Makefile  build_index.c  dot.c  dot.h  dotkws.c  dotkws.h  feat.c  feat.h  genproj.c  icsilog.h  lsh.c  plebdisc.c  plebkws.c  rescore_singlepair_dtw.c  score_matches.c  score_matches.h  second_pass.c  (+6 more)
track2/src/icsi-scenic-tools-20120105/: ChangeLog  Makefile  Makefile.in  README  aclocal.m4  config.cache  config.status  configure  configure.in
track2/src/icsi-scenic-tools-20120105/dpwelib-1.01/: CHANGES  IEEE80.c  IEEE80.h  Makefile  Makefile.in  README  Sound.C  Sound.H  audIO.h  audIO.man  audIOdecwmm.c  audIOfake.c  audIOlinux.c  audIOsgi.c  audIOstub.c  audIOsun.c  byteswap.c  byteswap.h  cle.c  cle.h  cle.man  cletest.tcl  config.h  config.h.in  config.status  configure  configure.in  dpweaiff.h  dpwelib.h.in  dpwelibConfig.sh  dpwelibConfig.sh.in  fft.c  fft.h  genutils.c  genutils.h  pushfileio.c  pushfileio.h  resambuf.c  resambuf.h  resample.c  (+39 more)
track2/src/icsi-scenic-tools-20120105/feacalc-0.92/: .feacalc_hist  CmdLineStuff.C  CmdLineStuff.H  ExecUtils.C  ExecUtils.H  FileList.C  FileList.H  FtrCalc.C  FtrCalc.H  INSTALL  INSTALL-icsi  InputFile.C  InputFile.H  Makefile  Makefile.in  NEWS  OutputFile.C  OutputFile.H  ParamListFile.C  ParamListFile.H  Percept.C  Percept.H  README  Rasta.C  Rasta.H  TODO  aclocal.m4  config.status  configure  configure.in  feacalc.C  feacalc.man  floatVec.H  rasta.tcl  wavs2onlaudio.C  wavs2onlaudio.man
track2/src/icsi-scenic-tools-20120105/feacat-1.02/: INSTALL  Makefile  Makefile.in  NEWS  README  Range.C  Range.H  Range.man  TODO  aclocal.m4  config.status  configure  configure.in  feacat.C  feacat.man  labcat.man  linecat.C  linecat.man  segpostsum.C  segpostsum.man  test-feacat.tcl  test-range.tcl
track2/src/icsi-scenic-tools-20120105/pfile_utils-v0_52/: INSTALL  Makefile  Makefile.in  MixBiNormal.cc  MixBiNormal.h  MixBiNormal_chelp.c  NEWS  README  Range.C  Range.H  TODO  aclocal.m4  bin_search.cc  config.status  config.sub  configure  configure.in  eig.c  eig.h  error.cc  error.h  icsiarray.h  ilab_create.cc  ilab_create.man  linalg.cc  linalg.h  mul_mdmd_md.c  mul_mdmd_md_l0g.c  mul_mdmd_md_l0nf.c  parse_subset.cc  parse_subset.h  pfile_addsil.cc  pfile_build.cc  pfile_concat.cc  pfile_create.cc  pfile_diff.cc  pfile_ftrcombo.cc  pfile_gaussian.cc  pfile_info.cc  pfile_initmg.cc  (+15 more)
track2/src/icsi-scenic-tools-20120105/quicknet-v3_31/: COPYING  INSTALL  INSTALL-icsi  Makefile  Makefile.in  NEWS  QN3Config-install.sh  QN3Config.sh  QN3Config.sh.in  QN_AsciiStream.cc  QN_AsciiStream.h  QN_CudaUtils.cu  QN_CudaUtils.h  QN_HTKstream.cc  QN_HTKstream.h  QN_ILab.cc  QN_ILab.h  QN_ListStream.cc  QN_ListStream.h  QN_ListStreamSRI.cc  QN_ListStreamSRI.h  QN_Logger.cc  QN_Logger.h  QN_Logger_Simple.cc  QN_Logger_Simple.h  QN_MLP.h  QN_MLPWeightFile.h  QN_MLPWeightFile_Matlab.cc  QN_MLPWeightFile_Matlab.h  QN_MLPWeightFile_RAP3.cc  QN_MLPWeightFile_RAP3.h  QN_MLP_BaseFl.cc  QN_MLP_BaseFl.h  QN_MLP_Bunch1632Fx3.cc  QN_MLP_Bunch1632Fx3.h  QN_MLP_BunchCudaVar.cu  QN_MLP_BunchCudaVar.h  QN_MLP_BunchFl3.cc  QN_MLP_BunchFl3.h  QN_MLP_BunchFlVar.cc  (+133 more)
track2/src/icsi-scenic-tools-20120105/quicknet-v3_31/autom4te.cache/: output.0  requests  traces.0
track2/src/icsi-scenic-tools-20120105/quicknet-v3_31/perfsuite/: MLP3_perf.cc  Makefile  Makefile.in
track2/src/icsi-scenic-tools-20120105/quicknet-v3_31/testsuite/: InFtrStream_Narrow_test.cc  InFtrStream_Norm_test.cc  InFtrStream_OneHot_test.cc  InFtrStream_SplitFtrLab_test.cc  LNA8_test2.cc  MLP3_test.cc  MLPWeightFile_test.cc  MLPWeightFile_test2.cc  Makefile  Makefile.in  PFile_test1.cc  PFile_test2.cc  PFile_test3.cc  RandWindow_test.cc  RateSchedule_test.cc  SeqWindow_test.cc  TODO  camfiles_test1.cc  convol_test.cc  cut_test.cc  endtest.cc  mat_test.cc  onlftr_test2.cc  tanh_test.cc  utils_test.cc
track2/src/icsi-scenic-tools-20120105/rasta/: INSTALL  Makefile  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  anal.c  audspec.c  config.h  config.h.in  config.status  configure  configure.in  create_mapping.in  debug.c  deltas_c.c  fft.c  fvecsubs.c  init.c  invcep.c  inverse_nl.c  io.c  lpccep.c  lsqsolve.1  lsqsolve.c  mapping.c  mul_mdmd_md.c  mul_vfmf_vf.c  nl_audspec.c  noise_est.c  post_audspec.c  powspec.c  rasta.1  rasta.c  rasta.h  rastaConfig.sh  rastaConfig.sh.in  rasta_filt.c  (+1 more)
(+171 files in other folders)
